--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,17 +31,13 @@ header button {
   width: 130px;
   height: 50px;
   top: -10px;
-  left: 400px;
+  left: 550px;
   font-size: 18px;
   text-align: center;
   border: none;
   border-radius: 12px;
   cursor: pointer;
   outline: none;
-}
-
-header #btnReadFile {
-  background-color: #00ffff;
 }
 
 header #btnStart {
@@ -83,7 +79,13 @@ header .line {
   width: 830px;
   height: 340px;
   margin: 20px 0 0 30px;
-  font-size: 40px;
+  padding-top: 55px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  font-size: 140px;
+  font-family: 'Noto Serif', serif;
   text-align: center;
   border: none;
   outline: none;
