아두이노와 시리얼 통신 & 아두이노 연결 상태에 따른 버튼 비활성화

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,13 @@ header button {
 
 header #btnStart {
   margin-left: 5px;
+}
+
+.disconnect {
+  background-color: #5c5c5c;
+}
+
+.connect {
   background-color: #7fffd4;
 }
 
